--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,23 @@ variables:
   buildConfiguration: 'Release'
 
 steps:
-- script: dotnet build --configuration $(buildConfiguration)
-  displayName: 'dotnet build $(buildConfiguration)'
+
+- task: DotNetCoreCLI@2
+
+  displayName: 'Restore'
+
+  inputs:
+
+    command: restore
+
+    projects: '**/*.csproj'
+
+- task: DotNetCoreCLI@2
+
+  displayName: 'Build'
+
+  inputs:
+
+    projects: '**/*.csproj'
+
+    arguments: '--configuration $(BuildConfiguration) '
