--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,21 +15,28 @@ variables:
 steps:
 
 - task: DotNetCoreCLI@2
-
   displayName: 'Restore'
-
   inputs:
-
     command: restore
-
     projects: '**/*.csproj'
+
+- task: SonarQubePrepare@4
+  inputs:
+    SonarQube: 'SonarQube Service Endpoint'
+    scannerMode: 'MSBuild'
+    projectKey: 'sonarlint'
+    projectName: 'Prototypes.SonarLint'
 
 - task: DotNetCoreCLI@2
-
   displayName: 'Build'
-
   inputs:
-
     projects: '**/*.csproj'
-
     arguments: '--configuration $(BuildConfiguration) '
+
+- task: SonarQubeAnalyze@4
+  displayName: "Run Code Analysis"
+
+- task: SonarQubePublish@4
+  displayName: "Publish Code Analysis"
+  inputs:
+    pollingTimeoutSec: '300'
