--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,7 +24,7 @@ steps:
   inputs:
     SonarQube: 'SonarQube Service Endpoint'
     scannerMode: 'MSBuild'
-    projectKey: 'sonarlint'
+    projectKey: 'KataCart.SonarLint'
     projectName: 'KataCart.SonarLint'
 
 - task: DotNetCoreCLI@2
